[gd_scene load_steps=2 format=3 uid="uid://dxmamoedlyd4h"]

[ext_resource type="Script" uid="uid://c3cnavx8ktbth" path="res://Battle Systems/Scripts/action_menu.gd" id="1_pmcq7"]

[node name="Action Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmcq7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attack" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="Spellcast" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Spellcast"

[node name="Item" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Item"

[connection signal="pressed" from="VBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/Spellcast" to="." method="_on_spellcast_pressed"]
[connection signal="pressed" from="VBoxContainer/Item" to="." method="_on_item_pressed"]
